# HyperKan

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  hyperkan_verified_symbolic_rewrite_search_submission_fixed.tex  pyproject.toml  requirements-frozen.txt  requirements-lock.txt
configs/: local_poc.yaml  overfit_test.yaml  scoped_depth7_frontier_infamily.yaml  scoped_depth7_frontier_transfer.yaml  scoped_depth7_frontier_transfer_static.yaml  scoped_depth7_frontier_transfer_transformer.yaml  scoped_depth_expansion_probe.yaml  scoped_diverse.yaml  scoped_medium.yaml  scoped_smoke.yaml  scoped_structural_probe.yaml  scoped_structural_probe_hyper_local.yaml  scoped_structural_probe_hyper_sitefirst.yaml  scoped_structural_probe_transformer.yaml  toolbox_smoke.yaml
data_gen/: __init__.py  actions.py  canonicalize.py  frontier_supervision.py  generate_backward.py  scoped_actions.py  validate_dataset.py
docs/: deep_chain_next_round.md  depth7_learned_frontier_results.md  early_frontier_hypothesis.md  early_frontier_reranker_plan.md  early_frontier_reranker_results.md  hyperkan_recovery_plan.md  hyperkan_recovery_results.md  rl_frontier_controller_results.md  scoped_action_spec.md  scoped_depth_expansion_plan.md  scoped_depth_expansion_results.md  scoped_structural_results.md  shallow_benchmark_details.md  shallow_result_template.md  transformer_baseline_results.md
eval/: __init__.py  run_scoped_smoke_eval.py  run_verified_eval.py
models/: __init__.py  encoder_bigru.py  factory.py  hyperkan_head.py  kan_head.py  mlp_policy.py
paper/: README.md  (+1 more)
(+254 files in other folders)
