[project]
name = "mathy"
version = "0.1.0"
description = "Goal-conditioned HyperKAN for verified algebraic rewriting"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "sympy>=1.13",
  "torch>=2.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

